[tool.poetry]
name = "neurotools"
version = "0.1.0"
description = ""
authors = ["RLTheta <wolc@duck.com>"]
readme = "README.md"

[tool.poetry.group.chect_chats.dependencies]
python = "^3.11"
httpx = "^0.27.0"
click = "^8.1.7"
loguru = "^0.7.2"
tenacity = "^8.2.3"
tqdm = "^4.66.2"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
